[package]
name = "master"
version = "0.1.0"
edition = "2021"

[lib]
name = "master"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
rand = "0.8.5"
derive_more = "0.99.17"
itertools = "0.10.3"
pyo3 = { version = "0.16.1", features = ["extension-module"] }