[package]
name = "master"
version = "0.1.0"
edition = "2021"

[lib]
name = "master"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.14", features = ["max_level_trace", "release_max_level_trace"] }
rand = "0.8.5"
derive_more = "0.99.17"
itertools = "0.10.3"
pyo3 = { version = "0.16.1", features = ["extension-module"] }
pyo3-log = "0.6.0"
grb = "1.3.0"
ndarray = "0.15.4"
float-ord = "0.3.2"
typed-index-collections = "3.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-complex = "0.4.0"